<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DateTimeSecaduleActivity">

    <RelativeLayout
        android:id="@+id/relavtive1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_react01"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/RbackBtn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@null"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_chevron_white_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/schedule_an_appointment_String"
            android:textColor="@color/colorwhite"
            android:textSize="22sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relavtive1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/selectdateH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/select_date"
                android:textColor="@color/colorblack"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/datePicker1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/selectdateH"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:inputType="none"
                android:layout_marginEnd="25dp"
                android:background="@drawable/button_bg_stroke"
                android:padding="18dp"
                android:hint="@string/dd_mm_yy"
                android:textAlignment="center"
                android:textSize="20sp"


                />

            <TextView
                android:id="@+id/selectTimeH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datePicker1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/select_time"

                android:textColor="@color/colorblack"
                android:textSize="20sp">

            </TextView>


            <TextView
                android:id="@+id/morningTvH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/selectTimeH"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/morning_string"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/timeTv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/morningTvH"
                android:layout_margin="10dp"

                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg_stroke"

                android:padding="10dp"

                android:text="@string/_09_00_am_12_00_pm"

                android:textColor="@color/colorgray02"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/afternoonTvH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timeTv1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/afternoon"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:padding="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_below="@id/afternoonTvH"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_bg_stroke"


                    android:text="@string/_12_00_pm_03_00_pm"
                    android:textColor="@color/colorgray02"

                    android:textSize="15sp"
                    android:id="@+id/timeTv2"


                    android:textStyle="bold"

                    >

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/afternoonTvH"

                    android:layout_toEndOf="@id/timeTv2"
                    android:background="@drawable/button_bg_stroke"
android:padding="10dp"

                    android:text="@string/_03_00_pm_6_00_pm"
                    android:layout_marginStart="25dp"
                    android:textColor="@color/colorgray02"

                    android:textSize="15sp"


                    android:id="@+id/timeTv3"


                    android:textStyle="bold"

                    >

                </TextView>



            <TextView
                android:id="@+id/eveningTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timeTv3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/evening"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"

                android:textStyle="bold">

            </TextView>


            <TextView
                android:id="@+id/timeTv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eveningTv"
                android:layout_margin="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg_stroke"
                android:padding="10dp"
                android:text="@string/_06_00_pm_08_00_pm"
                android:textColor="@color/colorgray02"
                android:textSize="18sp"

                android:textStyle="bold">

            </TextView>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/timeTv4"
    app:cardElevation="5dp"

    android:id="@+id/cardView"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    app:cardCornerRadius="5dp">


            <EditText
                android:id="@+id/messageUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="10dp"
                android:hint="@string/write_additional_message"
                android:inputType="textLongMessage"


                android:padding="15dp"
                android:textColor="@color/colorblack"
                android:textColorHint="@color/colorblack"
                android:autofillHints="Message">

            </EditText>

</androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/continueBtn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_below="@+id/cardView"
                android:layout_centerHorizontal="true"
                android:layout_margin="40dp"
                android:background="@drawable/rounded_button"
                android:text="@string/continue_button"
                android:textColor="#FFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>