<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"

    tools:context=".Activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_react01"
        android:padding="10dp"
        android:id="@+id/relavtive1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorwhite"
            android:text="@string/login"
            android:textSize="22sp"
            android:textStyle="bold"
            >

        </TextView>

    </RelativeLayout>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/iv"
        android:background="@drawable/shape_circle01"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_key_white"
        android:padding="5dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo">

    </ImageView>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/emailET"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_mail_gray"
        android:padding="5dp"
        android:hint="@string/email"
        android:drawablePadding="7dp"
        android:background="@drawable/shape_rect02"
        android:inputType="textEmailAddress"
        android:autofillHints="email">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailET"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_lock_gray"
        android:padding="5dp"
        android:hint="@string/password"
        android:id="@+id/password"
        android:drawablePadding="7dp"
        android:background="@drawable/shape_rect02"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/forget_password"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/forgetTv"
        android:layout_alignParentEnd="true"
        >

    </TextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:layout_below="@+id/forgetTv"
        android:text="@string/login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:minWidth="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/dont_have_account_click_on_it"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/noAccountTv"
        android:textSize="15sp"
        android:textColor="@color/colorPink"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        >

    </TextView>


</RelativeLayout>