<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:padding="5dp"
    app:contentPadding="5dp"
    app:cardElevation="4dp"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="100dp"
        android:id="@+id/image"
        android:scaleType="fitXY"
        android:padding="5dp"
        android:src="@drawable/ic_add_shopping_cart_primary"
        android:layout_height="100dp"
        android:contentDescription="@string/todo">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/TitleTv"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/image"
        style="@style/TextAppearance.AppCompat.Title"
        android:text="@string/bomber_price"
        android:textColor="@color/colorblack"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/priceTv"

       android:layout_alignParentEnd="true"
      android:textSize="18sp"
        android:text="@string/rs_500"
        android:layout_marginEnd="5dp"
        android:background="@drawable/shape_react05"
        android:textColor="@color/colorGreen"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/shortDes"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/image"
        android:textSize="18sp"
        android:text="@string/harir_treatment_hair_color_shower"
        android:layout_below="@+id/TitleTv"
        android:layout_height="wrap_content">

    </TextView>

    <ImageView
        android:id="@+id/nextIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/shortDes"
        android:layout_marginEnd="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_next_gray"
        android:contentDescription="@string/todo">

    </ImageView>

    <TextView
        android:id="@+id/cartTv"
        android:layout_width="wrap_content"
        android:layout_below="@+id/shortDes"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/image"
        android:maxLines="2"
        android:textSize="18sp"
        android:minLines="2"
        android:text="@string/add_to_cart"
        android:gravity="center"
        android:drawableStart="@drawable/ic_add_shopping_cart_primary"
        android:textColor="@color/colorPrimary"/>




    <View
      android:layout_width="match_parent"
      android:layout_below="@+id/cartTv"
      android:id="@+id/view1"
      android:layout_marginBottom="5dp"
      android:background="@color/colorgray01"
      android:layout_height="1dp">

  </View>




</RelativeLayout>

</androidx.cardview.widget.CardView>


